<resources>
    <string name="app_name">AdeshinaShop</string>
    <string name="welcome_message">Welcome to Shak\'s store</string>
    <string name="start_shopping_button">START SHOPPING</string>
    <string name="welcome_text">Welcome to the <b>NUMBER1</b> canadian clothing store. AdeshinaStore is not just a store or business, it is a lifestyle for both the owners and employees. Find fashionable clothing for men, women and kids at affordable prices. \n Shaping your style is as easy as <b>1,2,3</b></string>
    <string name="description2_text"><b>NAVY BLUE - 9240/422</b>\n\n Piqué polo shirt with Mandarin collar in matching fabric and short sleeves with ribbed trim. Front button closure.\n\n MODEL HEIGHT: 6’ 2” (189 cm). SIZE L \n\n <b>JOIN LIFE</b>\nCare for fiber: 100% ecologically grown cotton.
Ecologically grown cotton is grown using practices that help us protect biodiversity, such as crop rotation or the use of natural fertilizers.</string>
    <string name="description1_text"><b>CAMEL - 0706/202</b>\n\n Bomber jacket made of faux leather fabric with faux fur interior and collar. Long sleeves with elasticized cuffs. Front snap button pockets. Elastic hem. Front zip closure.</string>
    <string name="description3_text"><b>WHITE - 5372/313</b>\n\n Roomy T-shirt with round neck and short sleeves. Front illustration by James Wilson. </string>
    <string name="description4_text"><b>DARK BLUE - 6045/302</b>\n\nSkinny jeans with washed effect. Five pockets. Front zip and metal button closure.</string>
    <string name="cart_items">ITEMS IN CART</string>
    <string name="current_inCart">0</string>
    <string name="addToCart2_Text">ADD TO CART</string>
    <string name="Minus2">-</string>
    <string name="Plus2">+</string>
    <string name="item2_price">25.90</string>
    <string name="addToCart3_Text">ADD TO CART</string>
    <string name="Minus3">-</string>
    <string name="increase_Decrease_TextView3">0</string>
    <string name="Plus3">+</string>
    <string name="item3_price">35.90</string>
    <string name="item1_price">250.0</string>
    <string name="item4_price">80.0</string>
    <string name="toast_message">You don\'t have any item in Cart</string>
    <string name="cart_total_amount">TOTAL $</string>
    <string name="toast_invalid_quantity_message">Select quantity to add to cart</string>
    <string name="total_before_tax">Total before Tax</string>
    <string name="g_s_t_5_0">G.S.T 5.0%</string>
    <string name="p_s_t_10">P.S.T 10%</string>
    <string name="order_id_mm436534">ORDER ID MM436534</string>
    <string name="total">TOTAL</string>
    <string name="thanks_for_shopping_with_us">Thanks for shopping with us</string>
    <string name="hello">HELLO</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="cad1">CAD</string>
    <string name="decrease1">-</string>
    <string name="quantity1">0</string>
    <string name="increase1">+</string>
    <string name="subtotal1">SUBTOTAL $</string>
    <string name="subTotal_text_1">0</string>
    <string name="cad2">CAD</string>
    <string name="decrease2">-</string>
    <string name="quantity2">0</string>
    <string name="increase2">+</string>
    <string name="subtotal2">SUBTOTAL $</string>
    <string name="subTotal_text2">0</string>
    <string name="item_name_3">T-SHIRT WITH JAMES WILSON ILLUSTRATION</string>
    <string name="cad3">CAD</string>
    <string name="decrease3">-</string>
    <string name="quantity3">0</string>
    <string name="increase3">+</string>
    <string name="subtotal3">SUBTOTAL $</string>
    <string name="subtotal_text_3">0</string>
    <string name="cad4">CAD</string>
    <string name="decrease4">-</string>
    <string name="quantity4">0</string>
    <string name="increase4">+</string>
    <string name="subtotal4">SUBTOTAL $</string>
    <string name="subTotal_text_4">0</string>
    <string name="item_name_1">DOUBLE SIDED BOMBER JACKET</string>
    <string name="item_name_2">BASIC PETER PAN COLLAR SHIRT</string>

</resources>
