<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FFFD4"
    android:gravity="center">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="T-SHIRT WITH JAMES WILSON ILLUSTRATION"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="339dp"
        android:background="@drawable/shirt2" />

    <TextView
        android:id="@+id/price3_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/item3_price"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Plus3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_Decrease_TextView3"
            android:padding="14sp"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Minus3" />



    </LinearLayout>

    <TextView
        android:id="@+id/description3_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description3_text" />
    <Button
        android:id="@+id/addToCart_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addToCart3_Text"/>

</LinearLayout>