<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC491"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title4_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="STRETCH SKINNY JEANS"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="339dp"
        android:background="@drawable/jeans" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/item4_price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="CAD"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quantityDecrease"
            android:text=" - " />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14sp"
            android:text="0" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quantityIncrease"
            android:text=" + " />

    </LinearLayout>

    <TextView
        android:id="@+id/description4_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description4_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B6DFFF"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="SUBTOTAL $" />

        <TextView
            android:id="@+id/subtotal_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#93CFFE"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="100dp"
            android:text="0" />

        <Button
            android:id="@+id/addToCart_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addToCart"
            android:text="@string/addToCart2_Text" />


    </LinearLayout>

</LinearLayout>